monica/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: monica
spec:
  clusterIP: None
  selector: {app: mariadb}
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
