monica/21-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
  namespace: monica
spec:
  selector:
    app: mariadb
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
