monica/25-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monica
  namespace: monica
spec:
  type: ClusterIP
  selector: {app: monica}
  ports:
    - name: http
      port: 80
      targetPort: http
