monica/65-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monica
  namespace: monica
spec:
  parentRefs:
    - name: internal-gateway
      namespace: istio-system
  hostnames:
    - "monica.internal.czcx.cc"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: monica
          port: 80
